fix: improve study page layout on mobile viewports

--- a/src/components/audio-control-bar/audio-control-bar.scss
+++ b/src/components/audio-control-bar/audio-control-bar.scss
@@ -3,7 +3,7 @@
 
 .c-audio-control-bar {
   @include flex-center;
-  width: 500px;
+  width: 100%;
 }
 
 .c-audio-control-button {
