--- a/src/components/deck-cover/deck-cover.scss
+++ b/src/components/deck-cover/deck-cover.scss
@@ -28,10 +28,11 @@
       font-size: 20px;
     }
 
+    // description
     p {
       @include webkit-scrollbar;
       width: 100%;
-      word-break: break-all;
+      overflow-wrap: anywhere;
       overflow-y: auto; // only show vertical scroll when needed
       font-size: 12px;
       flex: 1;
